# lp-algo-bot

./: README.md  pyproject.toml  setup.cfg
src/algo_bot/: backtrader_1.py  backtrader_2.py  main.py  requirements.txt
