[metadata]
name = lp-algo-bot-LordPuff
version = 0.0.1
author = Andy Johnson
author_email = jajohnson303@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jjohnson509/lp-algo-bot
project_urls =
    Bug Tracker = https://github.com/jjohnson509/lp-algo-bot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
